--- a/action.yml
+++ b/action.yml
@@ -1,8 +1,8 @@
-name: "Deploy to Cloudflare Workers with Wrangler"
+name: "Deploy to Cloudflare Workers with Wrangler and Rust"
 branding:
   icon: "upload-cloud"
   color: "orange"
-description: "Deploy your Cloudflare Workers and Pages projects from GitHub using Wrangler"
+description: "Deploy your Cloudflare Workers and Pages projects from GitHub using Wrangler and Rust"
 runs:
   using: "docker"
   image: "Dockerfile"
